file(GLOB SRCS *.cpp)


#Test all
#add_executable(mainTest main.cpp primTest.cpp primTest.h testRecursiveBacktracker.cpp testRecursiveBacktracker.h testRecursiveDivision.cpp testRecursiveDivision.h ../prims/LabGraph.cpp ../prims/LabGraph.h ../recursiveBacktracker/RecursiveBacktracker.h ../recursiveBacktracker/RecursiveBacktracker.cpp ../recursiveDivision/RecursiveDivision.h ../recursiveDivision/RecursiveDivision.cpp)

#target_link_libraries(mainTest
 #       gtest
 #       gmock
  #      )


#include_directories("..")

#install(TARGETS mainTest DESTINATION bin)




